# plangolin

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  encoded_gnn_test.ipynb  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
.gitlab/issue_templates/: bug_report.md
.gitlab/merge_request_templates/: template.md
data/pddl_domains/blocks/: domain.pddl  probBLOCKS-5-1.pddl  probBLOCKS-5-2.pddl  probBLOCKS-6-1.pddl
docs/ThundeRL/: README.md
docs/panorama/: README.md
examples/: encoded_gnn_test.ipynb  hetero.ipynb  run_supervised.py
experiments/: __init__.py  agent_loss_integration.py  analyze_rl_run.py  analyze_run.py  plan.py  policy.py  run_rl.py  run_supervised.py
experiments/rl/: analyze_run.py  data_layout.py  data_resolver.py  run.py
experiments/rl/configs/: __init__.py  agent.py  data_resolver.py  embedding.py  environment.py  logger.py  trainer.py  value_estimator.py
experiments/rl/thundeRL/: Readme.md  cli_config.py  run_lightning_fast.py  test_lightning_agent.py
notebooks/: visz_state_space.ipynb
slurm/: submit.py
src/plangolin/: __init__.py  logging_setup.py
src/plangolin/algorithms/: mdp_to_pyg.py  optimality.py  policy_evaluation_mp.py
src/plangolin/encoding/: base_encoder.py  color_encoder.py  direct_encoder.py  featuremap.py  hetero_encoder.py  ilg_hetero_encoder.py  node_factory.py
src/plangolin/models/: __init__.py  aggr.py  atom_valuator.py  hetero_gnn.py  hetero_message_passing.py  lightning_hetero.py  mixins.py  mlp.py  pooling.py  pyg_module.py  relational_gnn.py  vanilla_gnn.py  vanilla_litgnn.py
src/plangolin/rl/: __init__.py  data_layout.py  rollout_collector.py  torchrl_patches.py
src/plangolin/utils/: __init__.py  batching.py  data.py  inference_worker.py  misc.py  object_embeddings.py  plan.py  system.py
src/rgnet/: __init__.py  encoding.py  logging_setup.py  model.py  pddl_import.py  utils.py
src/rgnet/algorithms/: __init__.py  mdp_to_pyg.py  optimality.py  policy_evaluation_mp.py
src/rgnet/encoding/: __init__.py  base_encoder.py  color_encoder.py  color_graph.py  direct_encoder.py  encoder.py  encoder_base.py  featuremap.py  hetero.py  hetero_encoder.py  ilg_hetero_encoder.py  node_factory.py  node_names.py
src/rgnet/envs/: state_space_env.py
src/rgnet/model/: __init__.py  hetero_gnn.py  pure_gnn.py
src/rgnet/models/: __init__.py  atom_valuator.py  attention_aggr.py  hetero_gnn.py  hetero_message_passing.py  (+10 more)
src/xmimir/: __init__.py  data_pack.py  extensions.py  hints.py  iw.py  wrappers.py
test/: __init__.py  conftest.py  fixtures.py  test_encoding.py  test_pddl_import.py  test_utils.py
test/algorithms/: test_mdp_to_pyg_graph.py  test_optimal_policy.py  test_policy_evaluation.py  test_value_iteration.py
test/data/: test_atom_drive.py  test_data.py  test_flash_drive.py
test/encoding/: test_color_encoder.py  test_color_graph.py  test_direct_graph.py  test_hetero.py  test_hetero_graph.py
test/integration/: config-w1.yaml  config-w2.yaml  config.yaml  run_rl.py  test_panorama.py  test_thundeRL.py  thundeRL.py
test/model/: test_hetero_gnn.py  test_hetero_message_passing.py
test/models/: test_atom_valuator.py  test_attention_aggr.py  test_hetero_gnn.py  test_hetero_message_passing.py  test_pooling.py
test/rl/: test_agent.py  test_embedding.py  test_non_tensor_data_utils.py  test_rollout_collector.py  test_simple_loss.py  test_torchrl.py
test/supervised/: test_data.py  test_parse_serialized_dataset.py  test_training.py
test/xmimir/: test_iw.py  test_wrappers.py
test/xmimir_tests/: test_datapacks.py  test_iw.py  test_semantic_eq.py  test_wrappers.py
(+212 files in other folders)
